# TauWriter

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Status.md  build.sh
.github/workflows/: dev-bundle.yml
TauWriterMD/: TauWriterDesign.md
TauWriterMD/Languages/: LanguagesAndStructure.md
TauWriterMD/Languages/HubGS/: HubGSDescription.md  HubGsCollectionOperators.md  HubGsDescription.md
TauWriterMD/Languages/LSP/: KnowledgeBaseIndexer.md  TechStack.md
TauWriterMD/Languages/TWXML/: TWXML.md  TWXMLTestingCorpus.md  TWXML_Elements.md
TauWriterMD/Languages/Zed/: HubGSHighlights.md  TWXMLHighlights.md
examples/: all_elements.twxml  brave_little_tailor.hubgs  brave_little_tailor.twxml
extension/: Cargo.toml  extension.toml  extension.wasm
extension/grammars/hubgs/: grammar.json  node-types.json
extension/grammars/twxml/: Status.md  grammar.json
extension/languages/hubgs/: config.toml  grammar.js  grammar.json  highlights.scm  indents.scm  (+3 more)
extension/src/: lib.rs
lsp/: Cargo.toml  build.rs
lsp/src/: db.rs  formatter.rs  lib.rs  main.rs  parser.rs
lsp/src/db/: evaluator.rs  mod.rs  polymorphic.rs  resolution.rs  types.rs  validation.rs
lsp/src/formatter/: hubgs.rs  mod.rs  twxml.rs
lsp/src/handlers/: code_lens.rs  completion.rs  documents.rs  features.rs  information.rs  inlay_hints.rs  mod.rs  navigation.rs  symbols.rs
lsp/src/parser/: features.rs  hubgs.rs  mod.rs  twxml.rs
lsp/tests/: integration_tests.rs  lsp_jsonrpc_tests.rs  validation_tests.rs  workspace_symbols.rs
lsp/tests/fixtures/: completion_field.fixture  completion_id.fixture
(+43 files in other folders)
