[package]
name = "tauwriter-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Jarbear82","Gemini CLI"]
description = "Industrial-grade LSP for TauWriter (HubGS and TWXML)"

[dependencies]
tower-lsp = "0.20"
lsp-types = "0.94"
tower = "0.4"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
salsa = "0.27"
tree-sitter = "0.20"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5" # Concurrent maps for open file state
ropey = "1.6"
walkdir = "2.4" # For indexing unopened files

[build-dependencies]
cc = "1.0"
